--- a/src/scss/pages/contentDetails.scss
+++ b/src/scss/pages/contentDetails.scss
@@ -1,151 +1,357 @@
 @use '../mixins' as m;
 @use '../elements/button' as b;
+@use '../elements/author';
 
 .content-details {
+  background-color: #f1f2f3;
+
+  &-top {
+    background-color: var(--brand-primary);
+    padding-top: 32px;
+    padding-bottom: 32px;
+    position: relative;
+  }
+
+  &-bottom {
+    padding-top: 24px;
+    padding-bottom: 24px;
+  }
+
   article {
-    .top-wrap {
-      background-color: var(--brand-primary);
-      padding-top: 32px;
-      padding-bottom: 32px;
-      position: relative;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .content-wrap {
+    padding-right: 384px;
+  }
+
+  .breadcrumb {
+    margin-bottom: 24px;
+  }
+
+  header {
+    font-style: normal;
+    color: var(--brand-white);
+
+    h1 {
+      font-weight: bold;
+      font-size: 28px;
+      line-height: 33px;
+      letter-spacing: 0.87px;
+      margin-bottom: 16px;
     }
 
-    .breadcrumb {
-      margin-bottom: 24px;
+    p {
+      font-weight: normal;
+      font-size: 17px;
+      line-height: 22px;
+      letter-spacing: -0.408px;
+      margin-bottom: 20px;
     }
 
-    header {
-      font-style: normal;
-      color: var(--brand-white);
+    .info {
+      display: flex;
+      flex-direction: row;
+      flex-wrap: wrap;
+      align-items: center;
 
-      h1 {
-        font-weight: bold;
-        font-size: 28px;
-        line-height: 33px;
-        letter-spacing: 0.87px;
-        margin-bottom: 16px;
+      > * {
+        margin-right: 12px;
       }
 
-      p {
+      .v-separator {
+        height: 20px;
+        border-left: 1px solid rgba(#fff, 0.3);
+      }
+
+      .rating {
+        i {
+          @include m.inline-svg-icon(16px, var(--brand-secondary));
+        }
+      }
+
+      .enrolled,
+      .language {
+        font-style: normal;
         font-weight: normal;
-        font-size: 17px;
-        line-height: 22px;
-        letter-spacing: -0.408px;
-        margin-bottom: 20px;
+        font-size: 15px;
+        line-height: 20px;
+        letter-spacing: -0.24px;
+        color: var(--brand-white);
+      }
+    }
+  }
+
+  .sidebar {
+    // height: 0;
+    position: sticky;
+    // order: -1;
+    top: 88px;
+
+    &-container {
+      position: absolute;
+      top: 0;
+      height: 100%;
+      padding-top: 32px;
+      padding-bottom: 24px;
+    }
+
+    &-wrap {
+      width: 348px;
+      // position: absolute;
+      // right: 12px;
+      // top: 32px;
+      background-color: var(--brand-white);
+      border-radius: 24px;
+      overflow: hidden;
+      box-shadow: 0px 3px 7px rgba(14, 31, 53, 0.12);
+    }
+
+    &-content {
+      padding: 24px 12px;
+    }
+
+    hr {
+      margin-left: -12px;
+      margin-right: -12px;
+      background-color: rgba(46, 43, 69, 0.1);
+      opacity: 1;
+    }
+
+    .shop {
+      &-price {
+        margin-bottom: 12px;
+
+        > span {
+          display: inline-block;
+          color: #e95244;
+          text-align: right;
+
+          &:first-child {
+            font-weight: normal;
+            font-size: 22px;
+            line-height: 28px;
+            letter-spacing: 0.352px;
+            vertical-align: top;
+          }
+          &:last-child {
+            font-weight: bold;
+            font-size: 34px;
+            line-height: 41px;
+            letter-spacing: 0.374px;
+          }
+        }
       }
 
-      .info {
+      &-ctas {
         display: flex;
-        flex-direction: row;
-        flex-wrap: wrap;
-        align-items: center;
+        flex-direction: column;
 
-        > * {
-          margin-right: 12px;
+        > button {
+          flex-grow: 1;
+          border-radius: 4px;
+          margin: 6px 0;
+          @include m.button-reset;
+
+          &:first-child {
+            @include b.button("medium", "secondary");
+          }
+
+          &:last-child {
+            display: flex !important;
+            justify-content: center;
+            align-items: center;
+            border: 1px solid rgba(46, 43, 69, 0.15);
+            padding-top: 0 !important;
+            padding-bottom: 0 !important;
+            @include b.button("medium");
+
+            i {
+              margin-right: 8px;
+              @include m.inline-svg-icon(28px, var(--brand-orange));
+            }
+          }
+        }
+      }
+    }
+
+    .author {
+      margin-bottom: 8px;
+      @include author.base("medium");
+
+      &-container {
+        > h2 {
+          font-style: normal;
+          font-weight: 600;
+          font-size: 20px;
+          line-height: 24px;
+          color: var(--brand-primary);
+          margin-bottom: 12px;
         }
 
-        .v-separator {
-          height: 20px;
-          border-left: 1px solid rgba(#fff, 0.3);
+        > a {
+          @include b.button("medium");
+          width: 100%;
+          border: 1px solid rgba(46, 43, 69, 0.15);
+          color: var(--brand-primary);
+          margin-top: 24px;
         }
 
         .rating {
+          padding-left: 80px;
+          margin-top: -12px;
+
           i {
-            @include m.inline-svg-icon(16px, var(--brand-secondary));
+            @include m.inline-svg-icon(16px, var(--brand-orange));
           }
         }
+      }
+    }
+  }
 
-        .enrolled,
-        .language {
-          font-style: normal;
-          font-weight: normal;
-          font-size: 15px;
-          line-height: 20px;
-          letter-spacing: -0.24px;
-          color: var(--brand-white);
+  section {
+    background-color: var(--brand-white);
+    margin-bottom: 24px;
+    border-radius: 4px;
+
+    .section {
+      &[data-expanded="false"] {
+        .section-header {
+          border-bottom: 0;
+          button {
+            transform: rotate(180deg);
+          }
+        }
+        .section-content {
+          padding-top: 0;
+          padding-bottom: 0;
+          height: 0;
+        }
+      }
+      &[data-expanded="true"] {
+        .section-content {
+          height: auto;
         }
       }
     }
 
-    aside {
-      height: 0;
-      position: relative;
+    .section-header {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      padding: 16px 12px;
+      border-bottom: 1px solid rgba(46, 43, 69, 0.1);
 
-      .sidebar {
-        margin-top: -44px;
-        padding-left: 24px;
-
-        &-container {
-          background-color: var(--brand-white);
-          border-radius: 24px;
-          overflow: hidden;
-          box-shadow: 0px 3px 7px rgba(14, 31, 53, 0.12);
-        }
-
-        &-content-wrap {
-          padding: 24px 12px;
-        }
+      h2 {
+        font-style: normal;
+        font-weight: 600;
+        font-size: 20px;
+        line-height: 24px;
+        letter-spacing: 0.75px;
+        color: var(--brand-primary);
+        margin-bottom: 0;
       }
 
-      .shop {
-        &-price {
-          margin-bottom: 12px;
+      button {
+        @include m.button-reset;
+        height: 24px;
 
-          > span {
-            display: inline-block;
-            color: #e95244;
-            text-align: right;
-
-            &:first-child {
-              font-weight: normal;
-              font-size: 22px;
-              line-height: 28px;
-              letter-spacing: 0.352px;
-              vertical-align: top;
-            }
-            &:last-child {
-              font-weight: bold;
-              font-size: 34px;
-              line-height: 41px;
-              letter-spacing: 0.374px;
-            }
-          }
+        i {
+          @include m.inline-svg-icon(24px, #000);
         }
+      }
+    }
 
-        &-ctas {
-          display: flex;
-          flex-direction: column;
+    .section-content {
+      padding: 16px 12px;
+      overflow: hidden;
+      transition: padding 0.125s ease-in;
 
-          > button {
-            flex-grow: 1;
-            border-radius: 4px;
-            margin: 6px 0;
-            @include m.button-reset;
+      > p {
+        font-style: normal;
+        font-weight: normal;
+        font-size: 17px;
+        line-height: 25px;
+        letter-spacing: -0.408px;
+        color: var(--brand-primary);
 
-            &:first-child {
-              @include b.button("medium", "secondary");
-            }
-
-            &:last-child {
-              display: flex !important;
-              justify-content: center;
-              align-items: center;
-              border: 1px solid rgba(46, 43, 69, 0.15);
-              padding-top: 0 !important;
-              padding-bottom: 0 !important;
-              @include b.button("medium");
-
-              i {
-                margin-right: 8px;
-                @include m.inline-svg-icon(28px, var(--brand-orange));
-              }
-            }
-          }
+        &:last-of-type {
+          margin-bottom: 0;
         }
+      }
+    }
+
+    &.objectives {
+    }
+
+    &.description {
+      border-radius: 4px 4px 0 0;
+    }
+
+    &.curriculum {
+      border-top: 1px solid rgba(46, 43, 69, 0.1);
+      margin-top: -24px;
+      border-radius: 0 0 4px 4px;
+    }
+
+    &.author-container {
+      padding: 16px 12px;
+
+      > p {
+        margin-top: 8px;
+        padding-left: 80px;
+        font-style: normal;
+        font-weight: normal;
+        font-size: 16px;
+        line-height: 21px;
+        letter-spacing: -0.32px;
+        color: #000000;
+      }
+
+      > hr {
+        background-color: rgba(46, 43, 69, 0.1);
+        margin-left: -12px;
+        margin-right: -12px;
+        opacity: 1;
       }
 
       .author {
+        @include author.base("medium");
       }
+
+      .rating {
+        padding-left: 128px;
+
+        i {
+          @include m.inline-svg-icon(16px, var(--brand-orange));
+        }
+      }
+
+      .author-courses {
+        > h2 {
+          font-style: normal;
+          font-weight: 600;
+          font-size: 20px;
+          line-height: 24px;
+          letter-spacing: 0.75px;
+          color: var(--brand-primary);
+        }
+      }
+    }
+  }
+
+  footer.related {
+    padding: 0 12px;
+
+    > h2 {
+      font-style: normal;
+      font-weight: 600;
+      font-size: 20px;
+      line-height: 24px;
+      letter-spacing: 0.75px;
+      color: var(--brand-primary);
     }
   }
 }
