--- a/src/views/partials/author.html
+++ b/src/views/partials/author.html
@@ -1,4 +1,5 @@
-<div class="author author-small d-flex align-items-center">
+<% const size = obj.size || 'small' %>
+<div class="author author-<%= size %> d-flex align-items-center">
   <div class="author-photo ratio ratio-1x1">
     <img
       src="<%= require(`../../images/${photo}`) %>"
