🚧 Content Details page template

--- a/src/views/ContentDetail/layout.html
+++ b/src/views/ContentDetail/layout.html
@@ -92,29 +92,7 @@
               </div>
             </section>
 
-            <section class="curriculum accordion">
-              <div class="section accordion-item" data-expanded="true">
-                <div class="section-header">
-                  <h2 class="title">Course Curriculum</h2>
-                  <button class="accordion-toggler">
-                    <i
-                      ><%= require('../../images/icons/collapse.svg?inline')
-                      %></i
-                    >
-                  </button>
-                </div>
-                <div class="section-content accordion-item-content">
-                  Quis consequat anim laborum elit ex aliquip exercitation quis
-                  sint enim sit fugiat reprehenderit enim. Reprehenderit aute
-                  dolore duis tempor enim ut duis ipsum. Magna irure laboris
-                  incididunt duis magna. Laborum in dolor do quis reprehenderit
-                  excepteur exercitation dolore ea amet cupidatat anim aliqua.
-                  Dolor culpa incididunt aliquip laborum consequat exercitation
-                  deserunt cillum. Eiusmod aliqua esse non elit elit sunt ea sit
-                  pariatur aute fugiat consequat tempor pariatur.
-                </div>
-              </div>
-            </section>
+            <%= require('./curriculum.html')() %>
 
             <section class="author-container">
               <div class="row">
