--- a/src/scss/pages/contentDetails.scss
+++ b/src/scss/pages/contentDetails.scss
@@ -215,6 +215,7 @@
     background-color: var(--brand-white);
     margin-bottom: 24px;
     border-radius: 4px;
+    box-shadow: 0px 2px 4px rgba(14, 31, 53, 0.12);
 
     .section {
       &[data-expanded="false"] {
@@ -287,13 +288,165 @@
     }
 
     &.description {
-      border-radius: 4px 4px 0 0;
     }
 
     &.curriculum {
-      border-top: 1px solid rgba(46, 43, 69, 0.1);
-      margin-top: -24px;
-      border-radius: 0 0 4px 4px;
+      .curriculum-top {
+        padding: 16px 12px;
+
+        > h2 {
+          font-style: normal;
+          font-weight: 600;
+          font-size: 20px;
+          line-height: 24px;
+          letter-spacing: 0.75px;
+          color: var(--brand-primary);
+        }
+
+        .info {
+          font-style: normal;
+          font-weight: normal;
+          font-size: 15px;
+          line-height: 20px;
+          letter-spacing: -0.24px;
+          display: flex;
+          flex-direction: row;
+          align-items: center;
+          justify-content: space-between;
+
+          .length {
+            color: rgba(46, 43, 69, 0.6);
+            padding-left: 0;
+            margin-left: 0;
+          }
+
+          .lessons-sections-toggle {
+            color: var(--brand-orange);
+          }
+        }
+      }
+
+      .lessons {
+        .section-header {
+          background: #f1f2f3;
+          align-items: center;
+          height: 40px;
+          justify-content: flex-start;
+          border-top: 1px solid rgba(46, 43, 69, 0.1);
+          padding: 0 12px;
+
+          .section-title {
+            font-style: normal;
+            font-weight: 600;
+            font-size: 15px;
+            line-height: 20px;
+            letter-spacing: -0.24px;
+            color: rgba(60, 60, 67, 0.6);
+            margin-bottom: 0;
+            margin-left: 16px;
+          }
+
+          .section-counter {
+            font-style: normal;
+            font-weight: normal;
+            font-size: 15px;
+            line-height: 20px;
+            letter-spacing: -0.24px;
+            color: rgba(60, 60, 67, 0.6);
+            margin-left: auto;
+          }
+
+          .accordion-toggler {
+            order: -1;
+
+            i svg path {
+              fill: rgba(60, 60, 67, 0.6);
+            }
+          }
+        }
+
+        .section-content {
+          padding: 0 12px;
+
+          .lesson {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            padding-top: 12px;
+            padding-bottom: 12px;
+
+            &:not(:last-child) {
+              border-bottom: 1px solid rgba(46, 43, 69, 0.1);
+            }
+
+            &.is-playing {
+              .lesson-status i svg path {
+                fill: var(--brand-green);
+              }
+            }
+            &.is-locked {
+              .lesson-status i svg path {
+                fill: var(--brand-orange);
+              }
+            }
+
+            &-status {
+              width: 24px;
+              height: 24px;
+
+              i {
+                @include m.inline-svg-icon(24px, rgba(#2e2b45, 0.6));
+              }
+            }
+
+            &-order {
+              font-style: normal;
+              font-weight: normal;
+              font-size: 17px;
+              line-height: 22px;
+              letter-spacing: -0.408px;
+              color: #2e2b45;
+              text-align: right;
+              width: 37px;
+            }
+
+            &-title {
+              font-style: normal;
+              font-weight: normal;
+              font-size: 17px;
+              line-height: 22px;
+              letter-spacing: -0.408px;
+              color: #2e2b45;
+              padding-left: 24px;
+              padding-right: 24px;
+              margin-bottom: 4px;
+            }
+
+            &-detail {
+              display: flex;
+              flex-direction: column;
+            }
+            &-meta {
+              display: flex;
+              flex-direction: row;
+              align-items: center;
+              padding-left: 24px;
+              padding-right: 24px;
+            }
+
+            &-duration,
+            &-playing {
+              font-style: normal;
+              font-weight: normal;
+              font-size: 15px;
+              line-height: 20px;
+              letter-spacing: -0.24px;
+              color: rgba(60, 60, 67, 0.6);
+              margin-left: 12px;
+            }
+          }
+        }
+      }
     }
 
     &.author-container {
