🚧 Content Details page template

--- a/src/views/ContentDetail/curriculum.html
+++ b/src/views/ContentDetail/curriculum.html
@@ -72,7 +72,7 @@
           </div>
         </div>
 
-        <div class="lesson is-playing">
+        <div class="lesson">
           <div class="lesson-status">
             <i><%= require('../../images/icons/play.svg?inline') %></i>
           </div>
@@ -84,7 +84,6 @@
             <div class="lesson-meta">
               <div class="product-tag" data-product-type="video">Video</div>
               <div class="lesson-duration">29:51</div>
-              <div class="lesson-playing">Now playing</div>
             </div>
           </div>
         </div>
