--- a/src/scss/pages/contentDetails.scss
+++ b/src/scss/pages/contentDetails.scss
@@ -453,7 +453,7 @@
       padding: 16px 12px;
 
       > p {
-        margin-top: 8px;
+        margin-top: 16px;
         padding-left: 80px;
         font-style: normal;
         font-weight: normal;
@@ -475,7 +475,7 @@
       }
 
       .rating {
-        padding-left: 128px;
+        margin-top: 8px;
 
         i {
           @include m.inline-svg-icon(16px, var(--brand-orange));
@@ -490,13 +490,27 @@
           line-height: 24px;
           letter-spacing: 0.75px;
           color: var(--brand-primary);
+          margin-bottom: 12px;
+        }
+
+        .carousel-container {
+          margin: 0px -12px -16px;
+          padding: 0 12px 16px;
+
+          .card {
+            height: 174px;
+
+            .footer {
+              margin-top: auto;
+            }
+          }
         }
       }
     }
   }
 
   footer.related {
-    padding: 0 12px;
+    padding: 20px 12px 0;
 
     > h2 {
       font-style: normal;
@@ -505,6 +519,7 @@
       line-height: 24px;
       letter-spacing: 0.75px;
       color: var(--brand-primary);
+      margin-bottom: 12px;
     }
   }
 }
