--- a/src/scss/widgets/cards/product.scss
+++ b/src/scss/widgets/cards/product.scss
@@ -206,4 +206,72 @@
       }
     }
   }
+
+  &[data-display-type="mini"] {
+    display: flex;
+    flex-direction: row;
+    max-height: 200px;
+    padding: 12px;
+
+    .product-cover {
+      width: 56px;
+      height: 56px;
+      // border-radius: 24px 0 0 24px;
+      flex-shrink: 0;
+    }
+
+    .product-tag {
+      left: initial;
+      right: 6px;
+      top: 6px;
+    }
+
+    .product-summary {
+      padding-left: 12px;
+      padding-top: 0;
+      padding-bottom: 0;
+      display: flex;
+      flex-direction: column;
+      flex-grow: 1;
+
+      .header {
+        margin-bottom: 16px;
+        justify-content: space-between;
+      }
+
+      .footer {
+        > .col {
+          align-items: center;
+          justify-content: space-between;
+        }
+      }
+
+      .title {
+        flex-grow: 1;
+
+        h3 {
+          font-size: 15px;
+          line-height: 20px;
+          letter-spacing: -0.24px;
+          max-height: 40px;
+        }
+
+        p.description {
+          font-style: normal;
+          font-weight: normal;
+          font-size: 13px;
+          line-height: 18px;
+          letter-spacing: -0.078px;
+          color: rgba(46, 43, 69, 0.6);
+          max-height: 54px;
+          overflow: hidden;
+          margin: 0;
+        }
+      }
+
+      .rating {
+        margin-bottom: 8px;
+      }
+    }
+  }
 }
