⚡️ Accordion plugin improvement
- New feature: Add option to allow accordion item header to be clicked.

- New feature: Add option to change toggle button position

- New feature: Add option to use single expand mode

- New feature: Add option to expand specific accordion items when plugin was used

- Now using dedicated SCSS file

- Bugs fix and regular improvement

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -12,6 +12,7 @@
 @use 'widgets/footer';
 @use 'widgets/navbar';
 @use 'widgets/carousel';
+@use 'widgets/accordion';
 @use 'widgets/preloader';
 @use 'widgets/breadcrumb';
 @use 'widgets/pagination';
