--- a/src/views/Explore/filter.html
+++ b/src/views/Explore/filter.html
@@ -13,7 +13,7 @@
 
     <div class="filter-sections accordion">
       <div class="section accordion-item" data-expanded="true">
-        <div class="section-header">
+        <div class="accordion-item-header section-header">
           <div class="title">Categories</div>
           <button class="accordion-toggler">
             <%= require('../../images/icons/collapse.svg?inline') %>
@@ -114,7 +114,7 @@
       </div>
 
       <div class="section accordion-item" data-expanded="false">
-        <div class="section-header">
+        <div class="accordion-item-header section-header">
           <div class="title">Price</div>
           <button class="accordion-toggler">
             <%= require('../../images/icons/collapse.svg?inline') %>
@@ -144,7 +144,7 @@
       </div>
 
       <div class="section accordion-item" data-expanded="false">
-        <div class="section-header">
+        <div class="accordion-item-header section-header">
           <div class="title">Level</div>
           <button class="accordion-toggler">
             <%= require('../../images/icons/collapse.svg?inline') %>
@@ -199,7 +199,7 @@
       </div>
 
       <div class="section accordion-item" data-expanded="false">
-        <div class="section-header">
+        <div class="accordion-item-header section-header">
           <div class="title">Language</div>
           <button class="accordion-toggler">
             <%= require('../../images/icons/collapse.svg?inline') %>
@@ -224,7 +224,7 @@
       </div>
 
       <div class="section accordion-item" data-expanded="false">
-        <div class="section-header">
+        <div class="accordion-item-header section-header">
           <div class="title">Ratings</div>
           <button class="accordion-toggler">
             <%= require('../../images/icons/collapse.svg?inline') %>
